$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------

- fixed bug with IPv6 subnets in firewall rules

- added device msk to kernel configuration

- updated base system to FreeBSD 6.4

- avoid PEAR dependency and fix DHCPv6 range check when interface is not
  configured with a v6 address

- put logging back in for anti-spoof block rule


1.3b16
------

- Open firewall rules for link-local ipv6 addresses on opt and lan interfaces
  Initial basic support for secondary ip addresses
  Suggested ipv6 addr fix and dhcpv6 fix
  
- Add DHCPv6 support. requires dhcp6sd in /usr/local/sbin. Also modified is_ipaddr6 to return false if
  there is a prefix in the address
  
- fix RA flags on opt interfaces

- added additional RA options for lan and opt interfaces , required for DHCPv6

- added all-servers option to dnsmasq and removed overlap check as having multiple
  nameservers per domain is a valid configuration
  
- added function is_ipaddr4or6
  updated dnsmasq_edit and System setup page to use this function
  change to status_interfaces to list all ips on an interface 
  fix to status_interfaces to display nameservers from resolv.conf not nameservers.conf

- allow RA support on WAN interface, and add feature to automatically
  suggest an IPv6 address for the LAN interface, based on an RA received
  from WAN/ISP
  (contributed by Andrew White)

- added IPv6 support to mini_httpd (for the webGUI)

- allow IPv6 addresses for DNS servers on System: General setup page, and
  for hosts on the DNS forwarder setup page
  (contributed by Andrew White)

- allow the remote syslog port to be changed (requested by Martin Desormeaux
  for m0n0log project)

- added kernel security patch FreeBSD-SA-08:11.arc4random

- add support for Broadcom BCM5722 NIC
  (suggested by Sebastian Lemke)

- fix display of firewall rules and static routes pages in group manager
  (reported by Peter Allgeyer)

